deployment.yaml
#파드 설정
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  seletor:
    matchLabels:
      app: petclinic
    template:
      metadata:
        lables:
          app: petclinic
      spec:
        containers:
        - name: petclinic
          image: hklee2748/petclinic:latest
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: petclinic-home
            mountPath: /var/petclinic-home
          - name: docker-sock
            mountPath: /var/run/docker.sock
        volumes:
        - name: petclinic-home
          persistentVolumeClaim:
            claimName: petclinic-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
---
#메탈lb설정
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: LoadBalancer
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      ports: 80
      targetPort: 8080
---
#인그레스 설정
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-service
            port:
              number: 80
